experimental/parser/testdata/parser/syntax/eof_after_eq.proto.stderr.txt
warning: missing `package` declaration
 --> testdata/parser/syntax/eof_after_eq.proto
   = note: not explicitly specifying a package places the file in the unnamed
           package; using it strongly is discouraged

error: unexpected end-of-file in expression
  --> testdata/parser/syntax/eof_after_eq.proto:1:9
   |
 1 | syntax =
   |         ^ expected expression

encountered 1 error and 1 warning
